# K-NN

./: .gitignore  CMakeLists.txt  comando.sh  compilar.bat  compilar.sh  compknn.bat  convertir.c  csv.c  data_instagram.csv  ejecutarMinMonticulo.c  knn.c  list.c  list.h  main  main.c  maxMonticulo.c  maxMonticulo.h  wilson  wilson.c
img/0/: comando.sh
